--- a/_data/nav.yaml
+++ b/_data/nav.yaml
@@ -7,16 +7,14 @@
 #     - subtitle: "title of second level item"
 #       subhref: "relative link of second level item"
 
-- title: "About"
+- title: "About us"
   href: "#"
   subcategories:
     - subtitle: "What we do"
-      subhref: "/about/what-we-do"
-    - subtitle: "Our Team"
-      subhref: "/about/our-team"
-- title: "News"
-  href: "/news"
+      subhref: "/what-we-do"
+    - subtitle: "Our partners"
+      subhref: "/our-partners"
 - title: "Events"
   href: "/events"
-- title: "Contact"
-  href: "/contact"
+- title: "Sign up"
+  href: "/sign-up"
