--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,6 @@ url: http://www.yesproject.org
 baseurl: 
 email: info@yesproject.org
 github: 
-logo_path: /img/logo.svg
 copyright: "The Yes Project is a project of Voluntary Action Leicester. Voluntary Action Leicester is a registered charity (No. 509300) Company Limited by Guarantee (No. 1357513) Registered in England and Wales."
 
 #  Social media settings
@@ -35,7 +34,7 @@ analyticstracking: " "
 # Pagination
 
 paginate: 5
-paginate_path: "/news/:num/"
+paginate_path: "/blog/:num/"
 
 #  Timezone
 timezone: Europe/London
