--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ url: http://www.yesproject.org
 baseurl: 
 email: info@yesproject.org
 github: 
-copyright: "The Yes Project is a project of Voluntary Action Leicester. Voluntary Action Leicester is a registered charity (No. 509300) Company Limited by Guarantee (No. 1357513) Registered in England and Wales."
+copyright: "The YES Project is funded by Big Lottery Fund and the European Social Fund. The service is delivered by Voluntary Action LeicesterShire (VAL).</p><p>Voluntary Action LeicesterShire is the trading name of Voluntary Action Leicester registered charity (No. 509300) Registered in England and Wales. Copyright © 2016 Voluntary Action Leicester"
 
 #  Social media settings
 
