--- a/_data/nav.yaml
+++ b/_data/nav.yaml
@@ -12,9 +12,13 @@
   subcategories:
     - subtitle: "What we do"
       subhref: "/what-we-do"
+    - subtitle: "What we believe"
+      subhref: "/what-we-believe"
     - subtitle: "Our partners"
       subhref: "/our-partners"
 - title: "Events"
   href: "/events"
-- title: "Sign up"
-  href: "/sign-up"
+- title: "Get started"
+  href: "/get-started"
+- title: "Contact"
+  href: "/contact"
