--- a/_data/profiles.yaml
+++ b/_data/profiles.yaml
@@ -8,13 +8,23 @@
   #   email: "email address of person"
   #   website: "personal website of person"
   #   bio: "a paragraph of text explaining the persons background"
-  - name: "Wendy Bricket"
+  - name: "The Prince’s Trust"
     img: "/img/profiles/profile-placeholder.gif"
-    role: "Chair"
-    email: "wendy.b@valonline.org.uk"
-    bio: "Here is some bio information here is some bio information Here is some bio information here is some bio information. Here is some bio information here is some bio information Here is some bio information here is some bio information. Here is some bio information here is some bio information Here is some bio information here is some bio information."
-  - name: "Heather Roythorne Finch"
+    bio: "Helps thousands of young people transform their lives each year by getting them into jobs, education and training. As part of the YES Project, the charity offers work experience courses in a range of industries."
+    url: "/our-partners"
+  - name: "Flying Fish"
     img: "/img/profiles/profile-placeholder.gif"
-    role: "Secretary"
-    phone: "Profile phone"
-    email: "heather.rf@valonline.org.uk"
+    bio: "Flying Fish supports young people in care or leaving care on to the next steps in life by introducing them to the world of work.) "
+    url: "/our-partners"
+  - name: "Seed Creativity"
+    img: "/img/profiles/profile-placeholder.gif"
+    bio: "Seed Creativity is a fun, down-to-earth, hands-on digital marketing agency that believes great businesses deserve great visual communication. The company is offering a nine week course to give you the opportunity to learn about digital media."
+    url: "/our-partners"
+  - name: "Soft Touch Arts"
+    img: "/img/profiles/profile-placeholder.gif"
+    bio: "Soft Touch Arts is an award winning Leicester charity using arts, media and music activities as a tool to engage with and change the lives of disadvantaged young people.  The charity offers you the opportunity to explore a range of creative opportunities."
+    url: "/our-partners"
+  - name: "TwentyTwenty "
+    img: "/img/profiles/profile-placeholder.gif"
+    bio: "TwentyTwenty is a local charity that has already supported over 2000 young people to develop self-belief, achieve in education, learn work-ready skills and find and keep a job. The charity offers mentoring to help young people overcome the barriers they face."
+    url: "/our-partners"
