Fixes for search etc

--- a/_config.yml
+++ b/_config.yml
@@ -34,7 +34,7 @@ analyticstracking: " "
 # Pagination
 
 paginate: 5
-paginate_path: "/blog/:num/"
+paginate_path: "/news/:num/"
 
 #  Timezone
 timezone: Europe/London
@@ -49,10 +49,34 @@ conditionalstylesheets:
 
 #  Configuration for prose.io online editor
 prose:
-  ignore: ['_includes','assets','_assets','_layouts','_plugins','/.jekyll-metadata','feed.xml','bin','js','css','_sass','_config.yml','bower.json']
+  ignore: 
+    - '_includes'
+    - 'assets'
+    - '_assets'
+    - '_layouts'
+    - '_plugins'
+    - '/.jekyll-metadata'
+    - 'feed.xml'
+    - 'js'
+    - 'css'
+    - '_sass'
+    - 'CNAME'
+    - '.bowerrc'
+    - '.gitignore'
+    - '404.md'
+    - 'Gemfile'
+    - 'Gemfile.lock'
+    - 'README.md'
+    - '_config.yml'
+    - 'bower.json'
+    - 'favicon.ico'
   media: img
   metadata:
     _posts:
+      - name: "title"
+        field:
+          element: "text"
+          label: "title"
       - name: "date"
         field:
           label: "Date"
@@ -63,7 +87,24 @@ prose:
           label: "Published"
           element: "checkbox"
           value: false
+      - name: "summary"
+        field:
+          label: "Summary"
+          element: "textarea"
+          value: null
+      - name: "thumbnail-image"
+        field:
+          label: "Thumbnail Image"
+          element: "text"
+          placeholder: "/img/thumbnails/placeholder-thumbnail.png"
+          value: "/img/thumbnails/placeholder.jpg"
       - name: "layout"
         field:
-          element: "hidden"
+          label: "Layout"
+          element: "select"
           value: "default"
+          options:
+            - name: 'Default'
+              value: 'default'
+            - name: 'No Sidebars'
+              value: 'no-sidebars'
