--- a/_data/nav.yaml
+++ b/_data/nav.yaml
@@ -7,18 +7,25 @@
 #     - subtitle: "title of second level item"
 #       subhref: "relative link of second level item"
 
-- title: "About us"
+- title: "About"
   href: "#"
   subcategories:
-    - subtitle: "What we do"
-      subhref: "/what-we-do"
+    - subtitle: "Who we are"
+      subhref: "/who-we-are"
     - subtitle: "What we believe"
       subhref: "/what-we-believe"
-    - subtitle: "Our partners"
-      subhref: "/our-partners"
-- title: "Events"
-  href: "/events"
-- title: "Get started"
-  href: "/get-started"
+    - subtitle: "Who we help"
+      subhref: "/who-we-help"
+- title: "News"
+  href: "/news"
+- title: "Get involved"
+  href: "#"
+  subcategories:
+    - subtitle: "What you can do"
+      subhref: "/what-you-can-do"
+    - subtitle: "Courses"
+      subhref: "/courses"
+    - subtitle: "Get started"
+      subhref: "/get-started"
 - title: "Contact"
   href: "/contact"
