--- a/grunt/package.json
+++ b/grunt/package.json
@@ -1,15 +1,8 @@
 {
-  "name": "cwd",
+  "name": "yes-project-org",
   "version": "0.1.0",
   "devDependencies": {
     "grunt": "~0.4.5",
-    "grunt-contrib-concat": "^0.4.0",
-    "grunt-contrib-uglify": "^0.4.0",
-    "grunt-notify": "^0.3.0",
-    "grunt-contrib-imagemin": "^0.7.0",
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-contrib-sass": "^0.7.3",
-    "grunt-autoprefixer": "^0.7.3",
-    "grunt-browser-sync": "^0.9.1"
+    "grunt-jekyll-pages": "^1.3.0"
   }
 }
