--- a/_config.yml
+++ b/_config.yml
@@ -22,9 +22,7 @@ copyright: "The YES Project is funded by Big Lottery Fund and the European Socia
 
 #  Social media settings
 
-facebook: "voluntaryactionleics"
-twitter : "valonline"
-instagram: ""
+facebook: "yourprojectyes"
 permalink: pretty
 
 # Services
