CTA and new course dates page

--- a/_config.yml
+++ b/_config.yml
@@ -105,5 +105,7 @@ prose:
           options:
             - name: 'Default'
               value: 'default'
+            - name: 'Course'
+              value: 'course'
             - name: 'No Sidebars'
               value: 'no-sidebars'
