--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ url: http://www.yesproject.org
 baseurl: 
 email: info@yesproject.org
 github: 
-copyright: "The YES Project is funded by Big Lottery Fund and the European Social Fund. The service is delivered by Voluntary Action LeicesterShire (VAL).</p><p><a href=\"http://www.valonline.org.uk\">Voluntary Action LeicesterShire</a> is the trading name of Voluntary Action Leicester registered charity (No. 509300) Registered in England and Wales. Copyright © 2016 Voluntary Action Leicester"
+copyright: "The YES Project is funded by Big Lottery Fund and the European Social Fund. The service is managed by Voluntary Action LeicesterShire (VAL).</p><p><a href=\"http://www.valonline.org.uk\">Voluntary Action LeicesterShire</a> is the trading name of Voluntary Action Leicester registered charity (No. 509300) Registered in England and Wales. Copyright © 2016 Voluntary Action Leicester"
 
 #  Social media settings
 
