--- a/_config.yml
+++ b/_config.yml
@@ -12,8 +12,8 @@ gems:
   - jekyll-feed
    
 #  Site settings
-title: Yes Project
-description: Supporting you to take steps towards finding work
+title: GREAT Project
+description: Helping families move toward employment and training
 url: http://www.yesproject.org
 baseurl: 
 email: info@yesproject.org
