--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ gems:
    
 #  Site settings
 title: YES Project
-description: Helping families move toward employment and training
+description: Supporting you to take steps towards finding work
 url: http://www.yesproject.org
 baseurl: 
 email: info@yesproject.org
