--- a/_config.yml
+++ b/_config.yml
@@ -38,8 +38,9 @@ paginate_path: "/news/:num/"
 
 timezone: Europe/London
 
-exclude: ['bower.json']
-exclude: ['grunt']
+exclude:
+  - bower.json
+  - grunt
 
 # Conditional Stylesheets
 
@@ -47,7 +48,7 @@ conditionalstylesheets:
   - target: "ie9"
     path: "/css/ie9.css"
 
-#  Configuration for prose.io online editor
+# Configuration for prose.io online editor
 
 prose:
   media: img
