Fix thanks title

--- a/_config.yml
+++ b/_config.yml
@@ -67,8 +67,10 @@ prose:
     - '.bowerrc'
     - '.gitignore'
     - '404.md'
+    - 'news.xml'
     - 'Gemfile'
     - 'Gemfile.lock'
+    - 'license.md'
     - 'README.md'
     - '_config.yml'
     - 'bower.json'
