Fix published bug

--- a/_config.yml
+++ b/_config.yml
@@ -90,7 +90,7 @@ prose:
         field:
           label: "Published"
           element: "checkbox"
-          value: false
+          value: true
       - name: "summary"
         field:
           label: "Summary"
