--- a/_config.yml
+++ b/_config.yml
@@ -128,50 +128,13 @@ prose:
           label: "Summary"
           element: "textarea"
           value: null
-      - name: "day"
+      - name: "when"
         field:
-          element: "number"
-          label: "Day"
-          value: 1
-      - name: "month"
+          label: "When"
+          element: "text"
+          value: ""
+      - name: "where"
         field:
-          element: "select"
-          value: "01"
-          label: "Month"
-          options:
-            - name: 'January'
-              value: '01'
-            - name: 'February'
-              value: '02'
-            - name: 'March'
-              value: '03'
-            - name: 'April'
-              value: '04'
-            - name: 'May'
-              value: '05'
-            - name: 'June'
-              value: '06'
-            - name: 'July'
-              value: '07'
-            - name: 'August'
-              value: '08'
-            - name: 'September'
-              value: '09'
-            - name: 'October'
-              value: '10'
-            - name: 'November'
-              value: '11'
-            - name: 'December'
-              value: '12'
-      - name: "year"
-        field:
-          element: "select"
-          value: "2016"
-          label: "Year"
-          options:
-            - name: '2016'
-              value: '2016'
-            - name: '2017'
-              value: '2017'
-            - name: '2018'
-              value: '2018'
+          label: "Where"
+          element: "text"
+          value: ""
