Change event meta

--- a/_config.yml
+++ b/_config.yml
@@ -138,3 +138,8 @@ prose:
           label: "Where"
           element: "text"
           value: ""
+      - name: "layout"
+        field:
+          label: "Layout"
+          element: "hidden"
+          value: "event"
