Change event meta

--- a/_config.yml
+++ b/_config.yml
@@ -133,7 +133,7 @@ prose:
           label: "When"
           element: "text"
           value: ""
-      - name: "where"
+      - name: "venue"
         field:
           label: "Where"
           element: "text"
