--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,8 @@ copyright: "The YES Project is funded by Big Lottery Fund and the European Socia
 
 #  Social media settings
 
-facebook: "yourprojectyes"
+facebook: "yesprojectleics"
+instagram: "yesprojectleics"
 permalink: pretty
 
 # Services
