--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ url: 'https://www.yesproject.org'
 baseurl: null
 email: info@yesproject.org
 github: null
-copyright: 'The YES Project is funded by the European Social Fund and the National Lottery, through the Big Lottery Fund. The service is managed by Voluntary Action LeicesterShire (VAL).</p><p><a href="http://www.valonline.org.uk">Voluntary Action LeicesterShire</a> is the trading name of Voluntary Action Leicester registered charity (No. 509300) Registered in England and Wales. ©'
+copyright: 'The YES Project is funded by the European Social Fund and The National Lottery Community Fund. It is delivered by <a href="http://www.valonline.org.uk">Voluntary Action LeicesterShire</a> (VAL). VAL is the trading name of Voluntary Action Leicester. Registered charity no. 509300. Registered in England & Wales. ©'
 facebook: yesprojectleics
 instagram: yesprojectleics
 permalink: pretty
